# pfacts-sfw

./: .Cargo.toml.swp  Cargo.toml  README.md  shell.nix
src/: printerfacts.json
