[package]
name = "pfacts"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
description = "Printer facts in a crate!"
license = "0bsd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
